// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownContainer should be rendered correctly 1`] = `
<div
  className="uui-dropdown-body root dropdown-container-white -lock-focus container"
  style={
    Object {
      "maxWidth": undefined,
      "minHeight": undefined,
      "minWidth": undefined,
    }
  }
  tabIndex={0}
>
  <button
    className="container uui-button-box uui-enabled root uui-button uui-fill-solid uui-color-primary size-36"
    onClick={[Function]}
    tabIndex={-1}
    type="button"
  />
</div>
`;

exports[`DropdownContainer should be rendered correctly 2`] = `
<div
  className="uui-dropdown-body root dropdown-container-gray70 -lock-focus container"
  style={
    Object {
      "maxWidth": undefined,
      "minHeight": 600,
      "minWidth": 300,
    }
  }
  tabIndex={0}
>
  <button
    className="container uui-button-box uui-enabled root uui-button uui-fill-solid uui-color-primary size-36"
    onClick={[Function]}
    tabIndex={-1}
    type="button"
  />
</div>
`;
